# physics_showcase

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  FLUID_DYNAMICS_STATUS.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  Makefile.complete  PARTICLE_PHYSICS_STATUS.md  PHASE2_COMPLETE.md  PHASE2_RESULTS.md  PHASE4_GR_RESULTS.md  PHASE4_RESULTS.md  README.md  advanced_main.cpp  test_all_modules.cpp  test_new_modules.cpp
examples/: Makefile.advanced  advanced_demo.cpp  advanced_subdifferentials_demo.cpp  calculus_demo.cpp  differential_algebra_advanced_demo.cpp  field_tensor_demo.cpp  field_tensor_example.hpp  finance_demo.cpp  main.cpp  matrix_advanced_demo.cpp  matrix_operations_demo.cpp  nonsmooth_algorithms_demo.cpp  nonsmooth_demo.cpp  pde_solution_methods_demo.cpp  scientific_demo.cpp  stochastic_methods_demo.cpp  topology_demo.cpp  variational_calculus_demo.cpp  variational_wrm_demo.cpp
examples/navier_stokes/: blowup_search.cpp  highres_blowup.cpp  reynolds_sweep.cpp  taylor_green_decay.cpp
include/maths/: actuarial_life_tables.hpp  advanced_subdifferentials.hpp  black_scholes.hpp  calculus_theorems.hpp  complex_analysis.hpp  differential_algebra.hpp  distributions.hpp  econometrics_regression.hpp  fourier_analysis.hpp  group_theory_lie_groups.hpp  nonsmooth_algorithms.hpp  number_theory.hpp  ode_dynamical_systems.hpp  partial_differential_equations.hpp  pde_classification_solutions.hpp  pde_numerical_methods.hpp  pde_transform_methods.hpp  probability_theory.hpp  real_analysis.hpp  stochastic_differential_equations.hpp  topology.hpp  trigonometry_identities.hpp  variational_calculus.hpp  vectors.hpp
include/maths/actuarial/: life_tables.hpp
include/maths/advanced/pde/: partial_differential_equations.hpp  pde_classification_solutions.hpp  pde_numerical_methods.hpp  pde_solution_methods.hpp  pde_variational_methods.hpp
include/maths/advanced/probability/: distributions.hpp
include/maths/analysis/: convexity.hpp  subdifferential.hpp
include/maths/calculus/: theorems.hpp
include/maths/calculus/differential/: frechet_calculus.hpp
include/maths/linear_algebra/: matrices.hpp
include/maths/optimization/: error_bounds.hpp  metric_regularity.hpp  variational_principles.hpp
include/maths/probability/: distributions.hpp
include/maths/stochastic/: monte_carlo.hpp
include/maths/topology/: metric_spaces.hpp  set_valued_mappings.hpp  topological_spaces.hpp
include/maths/transforms/: fourier.hpp  polar.hpp
include/maths/trigonometry/: identities.hpp
include/physics/: advanced_mechanics.hpp  advanced_optics.hpp  calorimetry.hpp  circular_motion.hpp  classical_field_theory.hpp  classical_hamiltonian.hpp  classical_liouville.hpp  classical_phase_space.hpp  condensed_matter.hpp  cosmology_early_universe.hpp  cosmology_energy_density.hpp  cosmology_expanding_universe.hpp  cosmology_friedmann_equations.hpp  dynamics.hpp  elasticity.hpp  electric_circuits.hpp  electromagnetic_induction.hpp  electromagnetic_waves.hpp  electrostatics.hpp  energy_momentum.hpp  fluid_dynamics_boundary_layer.hpp  fluid_dynamics_compressible_flow.hpp  fluid_dynamics_flow_types.hpp  fluid_dynamics_vorticity.hpp  fluid_mechanics.hpp  gauge_theory_cp_violation_kaons.hpp  gauge_theory_gauge_invariance.hpp  gauge_theory_helicity.hpp  gauge_theory_higgs_mechanism.hpp  gauge_theory_running_couplings.hpp  gauge_theory_symmetries.hpp  general_relativity.hpp  heat_transfer.hpp  inclined_plane.hpp  kinematics.hpp  loop_quantum_gravity.hpp  magnetism.hpp  maxwell_equations.hpp  newton_laws.hpp  nuclear_physics.hpp  (+20 more)
include/physics/advanced/: physics_advanced.hpp
include/physics/advanced/fluid_dynamics/: boundary_layer.hpp  dimensionless_numbers.hpp  governing_equations.hpp  turbulence.hpp
include/physics/advanced/qft/: cross_sections.hpp  interactions.hpp  particle_physics.hpp  spin_statistics.hpp  supersymmetry.hpp
new_theory/: navier_stokes_regularity.hpp  navier_stokes_solver.hpp
tests/: phase2_basic_modules.cpp  phase2_expanded.cpp  phase4_general_relativity.cpp  phase4_special_relativity.cpp  phase5_actuarial.cpp  phase5_black_scholes.cpp  phase5_calorimetry.cpp  phase5_circuits.cpp  phase5_circular_motion.cpp  phase5_classical_liouville.cpp  phase5_complex_analysis.cpp  phase5_differential_algebra.cpp  phase5_differential_geometry.cpp  phase5_distributions.cpp  phase5_econometrics.cpp  phase5_elasticity.cpp  phase5_em_induction.cpp  phase5_fluid_mechanics.cpp  phase5_fourier.cpp  phase5_functional_analysis.cpp  phase5_group_theory.cpp  phase5_heat_transfer.cpp  phase5_inclined_plane.cpp  phase5_lqg.cpp  phase5_magnetism.cpp  phase5_maxwell.cpp  phase5_measure_theory.cpp  phase5_monte_carlo.cpp  phase5_newton_laws.cpp  phase5_nonsmooth.cpp  phase5_number_theory.cpp  phase5_ode_dynamical.cpp  phase5_operator_algebras.cpp  phase5_orbital.cpp  phase5_oscillations.cpp  phase5_pde.cpp  phase5_pde_classification.cpp  phase5_pde_numerical.cpp  phase5_pde_solutions.cpp  phase5_pde_transforms.cpp  (+21 more)
tests/new_theory/: test_navier_stokes.cpp  test_navier_stokes_solver.cpp
